# gps_tracker

./: .gitignore  CLAUDE.md  PLAN.md  README.md  agnss_data_fetcher.js  agnss_processor.html  casic_agnss_processor.js  casic_parser.py  extra_script.py  generate_uf2.py  gps_format_tool.py  gpx-viewer.js  index.html  main.py  platformio.ini  pyproject.toml  res.cpp
.github/workflows/: build-firmware-uf2.yml  deploy-frontend.yml
boards/: promicro_nrf52840.json
boards/promicro_nrf52840/variants/promicro_diy/: variant.c  variant.h
docs/: casic_agnss.md  delta_compress_gpx.md  firmware_migration_plan.md  firmware_phase0_inventory.md  protocol_parity_spec.md  protocol_test_vectors.md  state_spec.md  uart_file_proto.md
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: accel.rs  adv_scheduler.rs  battery.rs  ble.rs  bmp280.rs  board.rs  button.rs  casic.rs  display.rs  findmy.rs  google_fmdn.rs  gps.rs  main.rs  protocol.rs  secp160r1.rs  storage.rs  system_info.rs  timezone.rs  usb_msc.rs
firmware/src/gps/: agnss.rs  mod.rs  nmea_parser.rs  state_machine.rs
frontend/: .gitignore  create-icons.js  generate-icons.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.tsx  constants.ts  index.css  main.js  main.tsx
frontend/src/components/: FileExplorer.js  Logger.js  StatusPanel.js
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx
frontend/src/hooks/: useLogger.ts
frontend/src/lib/: utils.ts
frontend/src/modules/agnss/: AgnssDataFetcher.js  AgnssDataFetcher.ts  CasicAgnssProcessor.js  CasicAgnssProcessor.ts
frontend/src/services/: AgnssService.js  BleService.js  FileService.js  GpsDecoder.js  GpxConverter.js  bleService.ts  fdmnKeyGen.ts  fileService.ts  findmyKeyGen.ts  gpsDecoder.ts  gpxConverter.ts
frontend/src/styles/: main.css
frontend/src/types/: ble.ts  gpx-viewer.d.ts
frontend/src/utils/: constants.js  helpers.js  helpers.ts
patches/: InternalFileSystem.cpp.patch  RingBuffer.h.patch  nrf52840_s140_v6.ld.patch
patches/src/: InternalFileSystem.cpp  Ringbuffer.h  nrf52840_s140_v6.ld
scripts/: ferris_logo.rs  gen_logo.py  gen_tz_grid.py  usb_icon.rs
src/: LIS3DHTR.cpp  LIS3DHTR.h  accel_analyzer.cpp  accel_analyzer.h  accel_handler.cpp  accel_handler.h  battery.cpp  battery.h  ble_handler.cpp  ble_handler.h  bmp280_handler.cpp  bmp280_handler.h  button_handler.cpp  button_handler.h  casic_gps_wrapper.cpp  casic_gps_wrapper.h  config.h  display_handler.cpp  display_handler.h  file_transfer_protocol.cpp  file_transfer_protocol.h  gps_handler.cpp  gps_handler.h  gps_scheduler.cpp  gps_scheduler.h  gpx_logger.cpp  gpx_logger.h  i2c_lock.cpp  i2c_lock.h  littlefs_handler.cpp  littlefs_handler.h  logger.cpp  logger.h  main.cpp  power.txt  sd_fs_handler.cpp  sd_fs_handler.h  sd_handler.cpp  sd_handler.h  sd_simple.cpp  (+2 more)
tools/: build_uf2.py  findmy_query.py  fmdn_companion.py  pyproject.toml
tools/src/gps_tracker_tools/: casic.py  cli.py  findmy.py  fmdn.py  fmdn_fetch.py  gps_format.py  gpx.py  uf2.py
tools/timezone_tests/: Cargo.toml  build.rs
tools/timezone_tests/src/: lib.rs
